use overflow:auto to prevent big trees from coming out of their enclosing <div>

--- a/resources/public/css/fs.css
+++ b/resources/public/css/fs.css
@@ -213,6 +213,7 @@ div.evalresult {
     border:3px solid lightblue;
     -moz-border-radius: 25px;
     border-radius: 25px;
+    overflow:auto;
 }
 
 div.evalinput {
